--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi! I am Chua Siok Cheng, a passionate software developer specializing in interactive simulations and complex problem-solving. Currently pursuing a BSc in Computer Science in Real-Time Interactive Simulation at DigiPen Institute of Technology with a minor in Mathematics, I bring creativity and technical expertise to every project. As a Data Analyst intern at Yanmar Singapore, I'm gaining valuable industry experience while continuing to expand my skillset. I'm dedicated to creating efficient, innovative solutions that make a difference.</p>
+            <p>Hi! I am Chua Siok Cheng, a passionate software developer specializing in interactive simulations and complex problem-solving. Currently pursuing a BSc in Computer Science in Real-Time Interactive Simulation at DigiPen Institute of Technology with a minor in Mathematics, I bring creativity and technical expertise to every project. As a Data Analyst intern at Yanmar Singapore, I'm gaining valuable industry experience while continuing to expand my skillset. I'm dedicated to creating efficient, innovative solutions that make a difference. I aim to deliver to the best of my capabilities for every project! Chatty (ChatGPT) is my best friend!</p>
         </section>
 
         <section id="skills">
@@ -361,6 +361,7 @@
                         <li>Data Structures & Algorithms</li>
                         <li>Machine Learning</li>
                         <li>Software Engineering</li>
+                        <li>Data Analysis</li>
                         <li>Problem Solving</li>
                         <li>Self-Learning</li>
                         <li>Using AI</li>
@@ -370,7 +371,7 @@
         </section>
 
         <section id="projects">
-            <h2>Featured Projects</h2>
+            <h2>Featured Projects (coming soon!)</h2>
             <div class="projects-grid">
                 <div class="project">
                     <video controls>
