--- a/index.html
+++ b/index.html
@@ -330,12 +330,12 @@
     <div class="container">
         <section id="about">
             <h2>About Me</h2>
-            <p>Hi! I am Chua Siok Cheng, a passionate software developer specializing in interactive simulations and complex problem-solving. Currently pursuing a BSc in Computer Science in Real-Time Interactive Simulation at DigiPen Institute of Technology with a minor in Mathematics, I bring creativity and technical expertise to every project. As a Data Analyst intern at Yanmar Singapore, I'm gaining valuable industry experience while continuing to expand my skillset. I'm dedicated to creating efficient, innovative solutions that make a difference. I aim to deliver to the best of my capabilities for every project! Chatty (ChatGPT) is my best friend!</p>
+            <p>Hi! I am Chua Siok Cheng, a passionate software developer specializing in interactive simulations and complex problem-solving. Currently pursuing a BSc in Computer Science in Real-Time Interactive Simulation at DigiPen Institute of Technology with a minor in Mathematics, I bring creativity and technical expertise to every project. As a Data Analyst intern at Yanmar Singapore, I'm gaining valuable industry experience while continuing to expand my skillset. I'm dedicated to creating efficient, innovative solutions that make a difference. I aim to deliver to the best of my capabilities for every project!</p>
             <p><a href="https://docs.google.com/document/d/1KtUNZLw-XsyTAzEQ49a8utOKvIWhPpOY-khTk38X1AU/edit?usp=sharing" target="_blank">[Latest Resume]</a></p>
             <p><a href="https://www.linkedin.com/in/chua-s-51a194143?utm_source=share&utm_campaign=share_via&
                 utm_content=profile&utm_medium=android_app" target="_blank">[LinkedIn]</a></p>
             <p><a href="https://drive.google.com/drive/folders/1jZCTztNKxdi9vMp8JO9KONNvD4p6s-cx?usp=drive_link" target="_blank">[Google Drive to previous projects]</a></p>
-            <p>Please drop me a whatsapp or message if your call does not go through as my phone doesnt have caller-ID </p>
+            <p>Please drop me a whatsapp or message if your call does not go through</p>
 
         </section>
 
